# appveyor-test

./: Cargo.toml  appveyor.yml
tests/: test1.rs
winhand/: Cargo.toml
winhand/src/: lib.rs
