[package]
name = "winhand"
version = "0.1.0"
authors = ["Eric Huss <eric@huss.org>"]

[dependencies]
winapi = {version = "0.3", features = ["restartmanager", "winerror"], git = "https://github.com/retep998/winapi-rs.git", branch="0.3"}
uuid = {version = "0.6", features = ["v4"]}
widestring = "0.3"
failure = "*"
